<resources>
    <string name="app_name">Pic To Poly</string>
    <string name="splash_pic">Pic</string>
    <string name="splash_to"> to </string>
    <string name="splash_poly">Poly</string>
    <string name="splash_open_image">Pictures</string>
    <string name="splash_camera">Camera</string>
    <string name="splash_gradient">Gradient</string>
    <string name="grad_gradient">Gradient</string>
    <string name="grad_dimensions">Resolution</string>
    <string name="grad_dimensions_width">Width</string>
    <string name="grad_dimensions_height">Height</string>
    <string name="grad_colors">Colors</string>
    <string name="grad_triangle_size">Triangle Size</string>
    <string name="grad_direction">Direction</string>
    <string name="grad_direction_horizontal">Left-to-Right</string>
    <string name="grad_direction_vertical">Top-to-Bottom</string>
    <string name="grad_apply">APPLY</string>
    <string name="grad_choose_color">Pick a Color</string>
    <string name="grad_color_cancel">Cancel</string>
    <string name="grad_select_color">OK</string>
    <string name="grad_width_not_number_error">Oops! The width needs to be a number.</string>
    <string name="grad_height_not_number_error">Oops! The height needs to be a number.</string>
    <string name="grad_red">Red</string>
    <string name="grad_pink">Pink</string>
    <string name="grad_purple">Purple</string>
    <string name="grad_deep_purple">Deep Purple</string>
    <string name="grad_indigo">Indigo</string>
    <string name="grad_blue">Blue</string>
    <string name="grad_light_blue">Light Blue</string>
    <string name="grad_cyan">Cyan</string>
    <string name="grad_teal">Teal</string>
    <string name="grad_green">Green</string>
    <string name="grad_light_green">Light Green</string>
    <string name="grad_lime">Lime</string>
    <string name="grad_yellow">Yellow</string>
    <string name="grad_amber">Amber</string>
    <string name="grad_orange">Orange</string>
    <string name="grad_deep_orange">Deep Orange</string>
    <string name="grad_brown">Brown</string>
    <string name="grad_grey">Grey</string>
    <string name="grad_blue_grey">Blue Grey</string>
    <string name="grad_black">Black</string>
    <string name="grad_white">White</string>
    <string name="nav_open_image">OPEN</string>
    <string name="nav_process_image">PROC</string>
    <string name="tri_delaunay">Delaunay</string>
    <string name="tri_delaunay_edge_points">Edge Points</string>
    <string name="tri_delaunay_near_edge_points">Near-Edge Points</string>
    <string name="tri_delaunay_near_edge_distance">Near-Edge Radius</string>
    <string name="tri_delaunay_random_points">Random Points</string>
    <string name="processed_image">Processed Image</string>
    <string name="image_uri_null">Bad Image Path.</string>
    <string name="action_settings">Settings</string>
    <string name="picture_path">/Pictures/PicToPoly/</string>
    <string name="image">Image</string>
    <string name="points">Points</string>
    <string name="filters">Filters</string>
    <string name="view">View</string>
    <string name="save">Save</string>
    <string name="auto_settings">Poly Settings</string>
    <string name="md_3d_rotation">\uf000</string>
    <string name="md_accessibility">\uf001</string>
    <string name="md_account_balance">\uf002</string>
    <string name="md_account_balance_wallet">\uf003</string>
    <string name="md_account_box">\uf004</string>
    <string name="md_account_child">\uf005</string>
    <string name="md_account_circle">\uf006</string>
    <string name="md_add_shopping_cart">\uf007</string>
    <string name="md_alarm">\uf008</string>
    <string name="md_alarm_add">\uf009</string>
    <string name="md_alarm_off">\uf00a</string>
    <string name="md_alarm_on">\uf00b</string>
    <string name="md_android">\uf00c</string>
    <string name="md_announcement">\uf00d</string>
    <string name="md_aspect_ratio">\uf00e</string>
    <string name="md_assessment">\uf00f</string>
    <string name="md_assignment">\uf010</string>
    <string name="md_assignment_ind">\uf011</string>
    <string name="md_assignment_late">\uf012</string>
    <string name="md_assignment_return">\uf013</string>
    <string name="md_assignment_returned">\uf014</string>
    <string name="md_assignment_turned_in">\uf015</string>
    <string name="md_autorenew">\uf016</string>
    <string name="md_backup">\uf017</string>
    <string name="md_book">\uf018</string>
    <string name="md_bookmark">\uf019</string>
    <string name="md_bookmark_outline">\uf01a</string>
    <string name="md_bug_report">\uf01b</string>
    <string name="md_cached">\uf01c</string>
    <string name="md_class">\uf01d</string>
    <string name="md_credit_card">\uf01e</string>
    <string name="md_dashboard">\uf01f</string>
    <string name="md_delete">\uf020</string>
    <string name="md_description">\uf021</string>
    <string name="md_dns">\uf022</string>
    <string name="md_done">\uf023</string>
    <string name="md_done_all">\uf024</string>
    <string name="md_event">\uf025</string>
    <string name="md_exit_to_app">\uf026</string>
    <string name="md_explore">\uf027</string>
    <string name="md_extension">\uf028</string>
    <string name="md_face_unlock">\uf029</string>
    <string name="md_favorite">\uf02a</string>
    <string name="md_favorite_outline">\uf02b</string>
    <string name="md_find_in_page">\uf02c</string>
    <string name="md_find_replace">\uf02d</string>
    <string name="md_flip_to_back">\uf02e</string>
    <string name="md_flip_to_front">\uf02f</string>
    <string name="md_get_app">\uf030</string>
    <string name="md_grade">\uf031</string>
    <string name="md_group_work">\uf032</string>
    <string name="md_help">\uf033</string>
    <string name="md_highlight_remove">\uf034</string>
    <string name="md_history">\uf035</string>
    <string name="md_home">\uf036</string>
    <string name="md_https">\uf037</string>
    <string name="md_info">\uf038</string>
    <string name="md_info_outline">\uf039</string>
    <string name="md_input">\uf03a</string>
    <string name="md_invert_colors">\uf03b</string>
    <string name="md_label">\uf03c</string>
    <string name="md_label_outline">\uf03d</string>
    <string name="md_language">\uf03e</string>
    <string name="md_launch">\uf03f</string>
    <string name="md_list">\uf040</string>
    <string name="md_lock">\uf041</string>
    <string name="md_lock_open">\uf042</string>
    <string name="md_lock_outline">\uf043</string>
    <string name="md_loyalty">\uf044</string>
    <string name="md_markunread_mailbox">\uf045</string>
    <string name="md_note_add">\uf046</string>
    <string name="md_open_in_browser">\uf047</string>
    <string name="md_open_in_new">\uf048</string>
    <string name="md_open_with">\uf049</string>
    <string name="md_pageview">\uf04a</string>
    <string name="md_payment">\uf04b</string>
    <string name="md_perm_camera_mic">\uf04c</string>
    <string name="md_perm_contact_cal">\uf04d</string>
    <string name="md_perm_data_setting">\uf04e</string>
    <string name="md_perm_device_info">\uf04f</string>
    <string name="md_perm_identity">\uf050</string>
    <string name="md_perm_media">\uf051</string>
    <string name="md_perm_phone_msg">\uf052</string>
    <string name="md_perm_scan_wifi">\uf053</string>
    <string name="md_picture_in_picture">\uf054</string>
    <string name="md_polymer">\uf055</string>
    <string name="md_print">\uf056</string>
    <string name="md_query_builder">\uf057</string>
    <string name="md_question_answer">\uf058</string>
    <string name="md_receipt">\uf059</string>
    <string name="md_redeem">\uf05a</string>
    <string name="md_report_problem">\uf05b</string>
    <string name="md_restore">\uf05c</string>
    <string name="md_room">\uf05d</string>
    <string name="md_schedule">\uf05e</string>
    <string name="md_search">\uf05f</string>
    <string name="md_settings">\uf060</string>
    <string name="md_settings_applications">\uf061</string>
    <string name="md_settings_backup_restore">\uf062</string>
    <string name="md_settings_bluetooth">\uf063</string>
    <string name="md_settings_cell">\uf064</string>
    <string name="md_settings_display">\uf065</string>
    <string name="md_settings_ethernet">\uf066</string>
    <string name="md_settings_input_antenna">\uf067</string>
    <string name="md_settings_input_component">\uf068</string>
    <string name="md_settings_input_composite">\uf069</string>
    <string name="md_settings_input_hdmi">\uf06a</string>
    <string name="md_settings_input_svideo">\uf06b</string>
    <string name="md_settings_overscan">\uf06c</string>
    <string name="md_settings_phone">\uf06d</string>
    <string name="md_settings_power">\uf06e</string>
    <string name="md_settings_remote">\uf06f</string>
    <string name="md_settings_voice">\uf070</string>
    <string name="md_shop">\uf071</string>
    <string name="md_shopping_basket">\uf072</string>
    <string name="md_shopping_cart">\uf073</string>
    <string name="md_shop_two">\uf074</string>
    <string name="md_speaker_notes">\uf075</string>
    <string name="md_spellcheck">\uf076</string>
    <string name="md_star_rate">\uf077</string>
    <string name="md_stars">\uf078</string>
    <string name="md_store">\uf079</string>
    <string name="md_subject">\uf07a</string>
    <string name="md_swap_horiz">\uf07b</string>
    <string name="md_swap_vert">\uf07c</string>
    <string name="md_swap_vert_circle">\uf07d</string>
    <string name="md_system_update_tv">\uf07e</string>
    <string name="md_tab">\uf07f</string>
    <string name="md_tab_unselected">\uf080</string>
    <string name="md_theaters">\uf081</string>
    <string name="md_thumb_down">\uf082</string>
    <string name="md_thumbs_up_down">\uf083</string>
    <string name="md_thumb_up">\uf084</string>
    <string name="md_toc">\uf085</string>
    <string name="md_today">\uf086</string>
    <string name="md_track_changes">\uf087</string>
    <string name="md_translate">\uf088</string>
    <string name="md_trending_down">\uf089</string>
    <string name="md_trending_neutral">\uf08a</string>
    <string name="md_trending_up">\uf08b</string>
    <string name="md_turned_in">\uf08c</string>
    <string name="md_turned_in_not">\uf08d</string>
    <string name="md_verified_user">\uf08e</string>
    <string name="md_view_agenda">\uf08f</string>
    <string name="md_view_array">\uf090</string>
    <string name="md_view_carousel">\uf091</string>
    <string name="md_view_column">\uf092</string>
    <string name="md_view_day">\uf093</string>
    <string name="md_view_headline">\uf094</string>
    <string name="md_view_list">\uf095</string>
    <string name="md_view_module">\uf096</string>
    <string name="md_view_quilt">\uf097</string>
    <string name="md_view_stream">\uf098</string>
    <string name="md_view_week">\uf099</string>
    <string name="md_visibility">\uf09a</string>
    <string name="md_visibility_off">\uf09b</string>
    <string name="md_wallet_giftcard">\uf09c</string>
    <string name="md_wallet_membership">\uf09d</string>
    <string name="md_wallet_travel">\uf09e</string>
    <string name="md_work">\uf09f</string>
    <string name="md_error">\uf0a0</string>
    <string name="md_warning">\uf0a1</string>
    <string name="md_album">\uf0a2</string>
    <string name="md_av_timer">\uf0a3</string>
    <string name="md_closed_caption">\uf0a4</string>
    <string name="md_equalizer">\uf0a5</string>
    <string name="md_gesture">\uf10b</string>
    <string name="md_save">\uf117</string>
    <string name="md_undo">\uf11c</string>
    <string name="md_folder">\uf1a6</string>
    <string name="md_adjust">\uf1d3</string>
    <string name="md_blur_circular">\uf1d6</string>
    <string name="md_camera_alt">\uf1e3</string>
    <string name="md_edit">\uf1fc</string>
    <string name="md_gradient">\uf21b</string>
    <string name="md_photo">\uf23e</string>
    <string name="md_remove_red_eye">\uf243</string>
</resources>