<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#03A9F4">

    <com.pictopoly.polydemo.TriangleSurfaceView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/splash_triangleSurfaceView" />

    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/splash_back"
        android:text="@string/md_undo"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical">

        <!--Logo Text-->
        <LinearLayout
            android:id="@+id/splash_logo_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape"
            android:layout_marginBottom="24dp"
            android:padding="12dp">

            <TextView
                android:id="@+id/splash_logo_text_1"
                android:text="@string/splash_pic"
                android:textSize="64sp"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <TextView
                android:id="@+id/splash_logo_text_2"
                android:text="@string/splash_to"
                android:textSize="36sp"
                android:textStyle="italic"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <TextView
                android:id="@+id/splash_logo_text_3"
                android:text="@string/splash_poly"
                android:textSize="64sp"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp"
                android:layout_gravity="top|center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        </LinearLayout>

        <!--Main Buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1">

                <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/splash_open_image"
                    android:text="@string/md_folder"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="48sp" />

                <TextView
                    android:text="@string/splash_open_image"
                    android:textSize="12sp"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1">

                <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/splash_camera"
                    android:text="@string/md_camera_alt"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="48sp" />

                <TextView
                    android:text="@string/splash_camera"
                    android:textSize="12sp"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1">

                <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/splash_gradient"
                    android:text="@string/md_gradient"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="48sp" />

                <TextView
                    android:text="@string/splash_gradient"
                    android:textSize="12sp"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>