<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_fragment_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!-- Point Options -->
    <LinearLayout
        android:id="@+id/nav_point_options"
        android:layout_width="216dp"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:background="#aa673AB7"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="84dp"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:orientation="horizontal">

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/nav_add_single_point"
            android:text="@string/md_adjust"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="24dp" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/nav_add_line_point"
            android:text="@string/md_gesture"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="24dp"/>

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/nav_process_image"
            android:text="@string/md_spellcheck"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="24dp"/>

    </LinearLayout>

    <!-- Image Options -->
    <LinearLayout
        android:id="@+id/nav_image_options"
        android:layout_width="144dp"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:background="#aa673AB7"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="84dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:orientation="horizontal">

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/nav_open_image"
            android:text="@string/md_folder"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="24dp" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/nav_camera"
            android:text="@string/md_camera_alt"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="24dp"/>

    </LinearLayout>

    <!-- Main Options -->
    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:background="#aa673AB7">

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/nav_add_image"
            android:text="@string/md_photo"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="24dp" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/nav_add_points"
            android:text="@string/md_blur_circular"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="24dp" />


        <Button
            style="?android:buttonBarButtonStyle"
            android:text="@string/md_edit"
            android:id="@+id/nav_edit_image"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="24dp" />

        <!--<Button-->
            <!--style="?android:buttonBarButtonStyle"-->
            <!--android:id="@+id/nav_sliders"-->
            <!--android:text="@string/md_tune"-->
            <!--android:textColor="#ffffffff"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center_horizontal|center_vertical"-->
            <!--android:textSize="24dp" />-->

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/nav_change_view"
            android:text="@string/md_remove_red_eye"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="24dp" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/nav_save_image"
            android:text="@string/md_save"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="24dp" />

    </LinearLayout>

</RelativeLayout>